--- a/package.json
+++ b/package.json
@@ -9,15 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.26.1",
-    "lucide-react": "^0.562.0",
-    "next": "16.1.1",
+    "next": "16.1.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -26,9 +20,8 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "16.1.2",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
