feat: implement overview swipe feed, navigation shell gestures, and dark mode UI system

--- a/context/decisions.yaml
+++ b/context/decisions.yaml
@@ -43,7 +43,7 @@ screens:
         - "voice"
         - "manual"
       speed:
-        voice: "<2 min"
+        voice: "<5s"
         manual: "<1 min"
     completion:
       default: "archive"
